# CRATE

./: CONTRIBUTING.md  README.md
apps/: tsconfig.json
apps/desktop/src-tauri/: Cargo.toml
apps/web/: package.json
apps/web/src/components/: AIWorkflowBuilder.tsx  Navigation.tsx  WorkspaceCard.tsx
apps/web/src/pages/: _app.tsx  index.tsx
benches/: benchmarks.rs
contracts/: Anchor.toml
error/: error.rs  mod.rs
exceptions/: __init__.py  core_exceptions.py
