
[package]
name = "crate-core"
version = "0.1.0"
edition = "2021"
description = "Core Rust library for Crate - AI-powered DeFi workspace"
authors = ["Crate Team <team@crate.lol>"]
license = "Apache-2.0"

[dependencies]
# Solana Dependencies
solana-program = "1.16"
solana-sdk = "1.16"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10.3"

# Async Runtime
tokio = { version = "1.28", features = ["full"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
pretty_assertions = "1.3"

[lib]
name = "crate_core"
crate-type = ["cdylib", "lib"]

[features]
default = []
test-bpf = []
